[gd_scene load_steps=5 format=2]

[ext_resource path="res://images/background.png" type="Texture" id=1]
[ext_resource path="res://clock.tres" type="DynamicFont" id=2]
[ext_resource path="res://pomodoro.gd" type="Script" id=3]
[ext_resource path="res://pomodoro_processing.gd" type="Script" id=4]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="TextDisplayer" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -202.0
margin_top = -107.0
margin_right = 202.0
margin_bottom = 107.0
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]"
script = ExtResource( 4 )

[connection signal="changeMessage" from="." to="TextDisplayer" method="_on_Control_changeMessage"]
[connection signal="inputTime" from="." to="." method="_on_Control_inputTime"]
[connection signal="gui_input" from="TextDisplayer" to="." method="_on_TextDisplayer_gui_input"]
